# axon

./: .gitignore  PKGBUILD  README.md  ROADMAP.md  config.py  main.py  pyproject.toml  requirements.txt  ui.py
.github/workflows/: nonbin.yml
axon_applauncher/: config.py  utils.py
axon_applauncher/src/: __init__.py
examples/: launcher.jsonc
src/axon_applauncher/: config.py  generator.py  main.py  ui.py  utils.py
